--- a/src/pages/Barcelona/Barcelona.css
+++ b/src/pages/Barcelona/Barcelona.css
@@ -44,6 +44,12 @@
     color: rgba(29, 30, 34, 0.8);
 }
 
+.bet-container {
+    display: flex;
+    overflow-x: auto; /* Enable horizontal scroll */
+    margin-bottom: 20px; /* Add some margin at the bottom if needed */
+}
+
 .bettingCard {
     display: flex;
     flex-direction: column;
@@ -56,6 +62,9 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     min-width: 250px;
     height: 250px;
+    flex: 0 0 auto; /* Allow the element to shrink and grow as needed */
+    margin-right: 10px;
+
 }
 
 .team-logos-container {
@@ -75,7 +84,7 @@
 }
 
 .score-input
- {
+{
     width: 80px;
     padding: 15px;
     margin: 5px;
@@ -109,8 +118,6 @@
 }
 
 
-
-
 .center-container {
     padding: 10px;
     display: flex;
@@ -121,16 +128,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
-  .tree-counter {
+}
+
+.tree-counter {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 10px 0;
-  }
-  
-  .tree-counter button {
+}
+
+.tree-counter button {
     background-color: #4CAF50; /* Green background */
     border: none;
     color: white;
@@ -142,20 +149,20 @@
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 4px; /* Rounded corners */
-  }
-  
-  .tree-counter span {
+}
+
+.tree-counter span {
     margin: 0 10px;
-  }
-  
-  .tree-plant-button {
-    margin-top: 20px; 
-    margin-bottom: 40px; 
-  }
-  
-  .trees-planted-text {
-    margin-top: 20px; 
-  }
+}
+
+.tree-plant-button {
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+.trees-planted-text {
+    margin-top: 20px;
+}
 
 
 .Reward-Div {
@@ -165,7 +172,7 @@
 }
 
 .Lottery-Div {
-  display: flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
