--- a/src/pages/Barcelona/Barcelona.css
+++ b/src/pages/Barcelona/Barcelona.css
@@ -1,30 +1,44 @@
-.container {
-    padding: 16px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
 
 .barcelona-header {
-    background-color: rgba(29, 30, 34, 0.9);
     padding: 10px;
+    background-color: rgba(29, 30, 34, 0.9);
     border-radius: 25px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: 2%;
+    text-align: center;
+    color: #ffffff;
+    margin: 10px;
+}
+
+.header-button{
+    width: 200px;
+    text-decoration: none;
+    display: inline-block;
+    color: #ececec;
+    background-color: #ea385a;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 0 10px rgba(0, 123, 255, 0.1);
+}
+
+.header-button:hover {
+    background-color: #c92c50;
+    color: rgba(29, 30, 34, 0.8);
+}
+
+
+.mini-container {
+    border-radius: 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: #ffffff;
 }
 
-.mini-container {
-    padding: 15px;
-    border-radius: 25px;
+.center-container {
+    padding-right: 10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    color: #ffffff;
 }
 
 .custom-button {
@@ -46,8 +60,7 @@
 
 .bet-container {
     display: flex;
-    overflow-x: auto; /* Enable horizontal scroll */
-    margin-bottom: 20px; /* Add some margin at the bottom if needed */
+    overflow-x: auto;
 }
 
 .bettingCard {
@@ -118,11 +131,7 @@
 }
 
 
-.center-container {
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-}
+
 
 .tree-interaction-container {
     display: flex;
