--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -1,4 +1,18 @@
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+}
 
+.container {
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 .token-container{
     width: 70%;
