--- a/src/pages/Barcelona/Barcelona.css
+++ b/src/pages/Barcelona/Barcelona.css
@@ -1,13 +1,16 @@
 
 .barcelona-header {
     padding: 20px;
-    background-color: rgba(29, 30, 34, 0.9);
+    background-image: url('src/assets/barcaHeader.jpg'); /* Update the path to your image */
+    background-size: cover;
+    background-position: center;
     border-radius: 25px;
     text-align: center;
     color: #ffffff;
     margin: 25px;
     margin-left: 150px;
     margin-right: 150px;
+    transition: transform 0.3s ease;
 }
 
 .header-button{
@@ -35,8 +38,6 @@
     display: flex;
     flex-direction: column;
 }
-
-
 
 .custom-button {
     text-decoration: none;
@@ -77,7 +78,6 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-color: rgba(29, 30, 34, 0.9);
     padding: 16px;
     border-radius: 15px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -85,6 +85,7 @@
     height: 295px;
     flex: 0 0 auto; /* Allow the element to shrink and grow as needed */
     margin-right: 10px;
+    border: 2px solid #ea385a;
 
 }
 
@@ -189,15 +190,30 @@
     display: flex;
 }
 
-.Lottery-Div {
-    min-width: 250px;
-    height: 250px;
-    padding: 10px;
+.lottery-container {
+    display: flex;
+    padding: 20px;
+    background-color: rgb(234, 56, 90, 0.8);
+    border-radius: 25px;
+    text-align: center;
+    color: #ffffff;
     margin: 25px;
     margin-left: 150px;
     margin-right: 150px;
+    height: 350px;
 }
 
+.content {
+    flex: 1; /* Takes up remaining space */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.gif-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .Donation-Div {}
