--- a/src/pages/Barcelona/Barcelona.css
+++ b/src/pages/Barcelona/Barcelona.css
@@ -74,6 +74,31 @@
     align-items: center;
 }
 
+.bet-swipe-container{
+    text-align: center;
+    color: #b62b44;
+    margin: 25px;
+    margin-left: 150px;
+    margin-right: 150px;
+
+}
+.team-swipe-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.FCB{
+    width: 300px;
+    height: 300px;
+    padding: 5px;
+}
+
+.TeamBet{
+    width: 300px;
+    height: 300px;
+    padding: 5px;
+}
 
 .column-container {
     padding-right: 10px;
@@ -294,4 +319,20 @@
 
 .odds-button:hover .hover-text {
     display: block;
+}
+
+.donation-container {
+    background-image: url('src/assets/trees.jpg'); /* Update the path to your image */
+    background-size: cover;
+    background-position: center;
+    border-radius: 25px;
+    text-align: center;
+    color: #ffffff;
+    margin: 25px;
+    margin-left: 150px;
+    margin-right: 150px;
+    height: 350px;
+    align-items: center;
+    justify-content: space-evenly;
+    backdrop-filter: blur(5px);
 }
