--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -16,23 +16,20 @@ body {
 }
 
 .token-container{
-    width: 70%;
+    width: 60%;
     height: 60%;
     margin: auto;
-    position: relative;
+    position: absolute;
     top: 10%;
-    bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(29, 30, 34, 0.8);
     border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     z-index: 1;
-    margin-top: 150px;
+
 }
 
 .token-list {
@@ -65,7 +62,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Adjust the height as needed */
+    height: 100vh;
+    width: 650px;
 }
 
 
@@ -73,30 +71,35 @@ body {
     border: 1px solid #ea385a;
     padding: 20px;
     margin: 5px;
-    color: whitesmoke;
-    border-radius: 10px;
+    color: #ececec;
+    border-radius: 25px;
     text-align: center;
     box-shadow: 0 0 10px rgba(0, 123, 255, 0.1);
+    background-color: #ea385a;
 }
 
 .token-label {
     font-weight: bold;
-    color: #b62b44;
+    color: #ffd700;
+    font-size: 1.2em;
 }
 
 .token-info {
-    margin-right: 5px;
+    margin-right: 8px;
+    color: #ffffff;
 }
+
+
 
 .token-action {
     display: block;
     margin-top: 15px;
+    color: #ffffff;
 }
-
 .token-link {
     text-decoration: none;
-    color: #ececec;
-    background-color: #ea385a;
+    color: #b62b44;
+    background-color: #ececec;
     padding: 10px 20px;
     border-radius: 5px;
     font-weight: bold;
@@ -105,5 +108,6 @@ body {
 }
 
 .token-link:hover {
-    background-color: #b62b44;
+    background-color: rgba(30, 30, 30, 0.75);
+    color: #242424;
 }
