--- a/src/pages/Barcelona/Barcelona.css
+++ b/src/pages/Barcelona/Barcelona.css
@@ -196,7 +196,7 @@
     text-decoration: none;
     display: block;
     color: #ececec;
-    background-color: #ea385a;
+    background-color: #b01330;
     padding: 10px 20px;
     border-radius: 5px;
     font-weight: bold;
